--- a/backstage/websites/contact.yaml
+++ b/backstage/websites/contact.yaml
@@ -4,6 +4,12 @@ metadata:
   name: carrd-contact
   title: Contact Page
   description:  A fancier version of LinkTree, hosted on Carrd.co
+  labels:
+    mainwaring.dev/host: cardd.co
+  links:
+    - url: https://contact.mainwaring.dev
+      title: Website
+      icon: public
 spec:
   type: website
   lifecycle: production
