--- a/backstage/services/strapi.yaml
+++ b/backstage/services/strapi.yaml
@@ -14,5 +14,5 @@ spec:
   lifecycle: production
   owner: engineering
   system: mainwaring-dev
-  dependsOn: [mainwaring-dev, postgres-production]
+  dependsOn: [mainwaring-dev, postgres]
 #  providesApis: [example-grpc-api]
