--- a/backstage/libraries/balena-push.yaml
+++ b/backstage/libraries/balena-push.yaml
@@ -11,6 +11,13 @@ metadata:
     github.com/project-slug: theaccordance/balena-push
   tags:
     - github-actions
+  links:
+    - url: https://github.com/marketplace/actions/balena-push
+      title: Github Actions Marketplace Listing
+      icon: storefront
+    - url: https://www.github.com/theaccordance/balena-push
+      title: Github
+      icon: github
 spec:
   type: library
   owner: joe@mainwaring.dev
