--- a/backstage/libraries/card-dealer.yaml
+++ b/backstage/libraries/card-dealer.yaml
@@ -13,6 +13,13 @@ metadata:
     - npm
     - typescript
     - javascript
+  links:
+    - url: https://www.npmjs.com/package/card-dealer
+      title:  NPM Listing
+      icon: storefront
+    - url: https://www.github.com/theaccordance/card-dealer
+      title:  Github
+      icon: github
 spec:
   type: library
   owner: joe@mainwaring.dev
