--- a/backstage/locations.yaml
+++ b/backstage/locations.yaml
@@ -14,6 +14,7 @@ spec:
     - ./groups/*.yaml
     - ./libraries/*.yaml
     - ./resources/*.yaml
+    - ./services/*.yaml
     - ./systems/*.yaml
     - ./users/*.yaml
     - ./websites/*.yaml
