--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,21 +4,17 @@
 
 version: 2
 updates:
-  # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
-    schedule:
-      interval: "weekly"
-  # Enable version updates for npm
-  - package-ecosystem: "npm"
-    # Look for `package.json` and `lock` files in the `root` directory
-    directory: "/"
-    ignore:
-      - dependency-name: "passport"
-    # Check the npm registry for updates every day (weekdays)
     reviewers:
       - "theaccordance"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/"
+    reviewers:
+      - "theaccordance"
+    schedule:
+      interval: "weekly"a
 
 
