don't pass config

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -33,5 +33,5 @@ jobs:
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - run: doctl apps create-deployment ${{ secrets.DIGITALOCEAN_APP_ID }} --config ./.do/backstage-backend.yaml
+      - run: doctl apps create-deployment ${{ secrets.DIGITALOCEAN_APP_ID }}
 
