--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -8,6 +8,7 @@ on:
       - 'backstage/**'
       - 'packages/backend/**'
       - 'plugins/**'
+      - 'app-config.yaml'
       - 'package.json'
   workflow_dispatch:
 jobs:
